# ishmail

./: .gitignore  COPYRIGHT  Makefile  NEWS  README.md
ac-tools/: Make.conf.in  aclocal.m4  config.h.in  configure.in  shtool
doc/: 07--uyBk2I9X3cS.html  07C1CfBrBM9X3cS.html  0Y-4QLBN0XwA0YK.html  0lKLpVBzLK9X3cS.html  1j.-uyBk2I9X3cS.html  3GEI2.BsKL9X3cS.html  3InsZOBOAH9X3cS.html  3mAwJVB4NK9X3cS.html  4V-4QLBN0XwA0YK.html  508NkEBPyK9X3cS.html  7HeSlNBpSL9X3cS.html  7U8YifBdqH9X3cS.html  8lI1QLB-zWwA0YK.html  9DeIvFBSQJ9X3cS.html  DAB1CfBrBM9X3cS.html  DEtRqFB0aG9X3cS.html  GksRqFB0aG9X3cS.html  HeeSlNBpSL9X3cS.html  Makefile  OUb3vyBctI9X3cS.html  OkswbfBjlJ9X3cS.html  P6tRqFB0aG9X3cS.html  Q1tRqFB0aG9X3cS.html  QDeIvFBSQJ9X3cS.html  QOrBmMB7OM9X3cS.html  QlHjaEBxDWwA0YK.html  S633AUB4IG9X3cS.html  SeeSlNBpSL9X3cS.html  Vj-1vFBulI9X3cS.html  VvEI2.BsKL9X3cS.html  WPeSlNBpSL9X3cS.html  XMsHpVB8FK9X3cS.html  Xeb3vyBctI9X3cS.html  XqbqgMBPQJ9X3cS.html  YW-4QLBN0XwA0YK.html  YvEI2.BsKL9X3cS.html  ZG3a7fB9yL9X3cS.html  b0tRqFB0aG9X3cS.html  bqbqgMBPQJ9X3cS.html  dU8YifBdqH9X3cS.html  (+9 more)
hgl/: .cvsignore  Base.h  BoolExpC.C  BoolExpC.h  BoolExpWinC.C  BoolExpWinC.h  ButtonBox.c  ButtonBox.h  ButtonBoxP.h  CallbackC.C  CallbackC.h  CallbackListC.C  CallbackListC.h  CharC.C  CharC.h  ColumnC.h  ColumnListC.C  ColumnListC.h  ExpElemC.C  ExpElemC.h  ExpElemListC.C  ExpElemListC.h  FieldC.h  FieldListC.C  FieldListC.h  FieldViewC.C  FieldViewC.h  FiltDialogC.C  FiltDialogC.h  FindDialogC.C  FindDialogC.h  FontChooserC.C  FontChooserC.h  FontDataC.C  FontDataC.h  ForceDialog.C  ForceDialog.h  HalAppC.C  HalAppC.h  HalDialogC.C  (+160 more)
html/: index-left.html  index-main.html  index.halsoft  index.html  inex-main.html  info-form.html  ishmail.html  robots.txt
html/guide/: 0.JlaEBGGWwA0YK.html  0r-1vFBulI9X3cS.html  1-Q.uNBGxI9X3cS.html  1dJ1QLB-zWwA0YK.html  2EtRqFB0aG9X3cS.html  3NC1CfBrBM9X3cS.html  3T8YifBdqH9X3cS.html  3W8YifBdqH9X3cS.html  466vpFBcuG9X3cS.html  5DeIvFBSQJ9X3cS.html  5MI1QLB-zWwA0YK.html  6MGD9FBBGK9X3cS.html  6V8YifBdqH9X3cS.html  6m52wFBX4N9X3cS.html  6wXf7fBT.L9X3cS.html  A-7NkEBPyK9X3cS.html  AAJ1QLB-zWwA0YK.html  E-7NkEBPyK9X3cS.html  E1tRqFB0aG9X3cS.html  EkbgcQBMGH9X3cS.html  FaEI2.BsKL9X3cS.html  FcJ1QLB-zWwA0YK.html  GnbqgMBPQJ9X3cS.html  HKeSlNBpSL9X3cS.html  Iq-1vFBulI9X3cS.html  J-JlaEBGGWwA0YK.html  LOH1QLB-zWwA0YK.html  LksRqFB0aG9X3cS.html  MR33AUB4IG9X3cS.html  Mr-1vFBulI9X3cS.html  OXMN.FBn.L9X3cS.html  PeeSlNBpSL9X3cS.html  QMeSlNBpSL9X3cS.html  RFwomgB97L9X3cS.html  UCeSlNBpSL9X3cS.html  VNXkYGBySH9X3cS.html  X-7NkEBPyK9X3cS.html  XBFI2.BsKL9X3cS.html  Xj52wFBX4N9X3cS.html  bvEI2.BsKL9X3cS.html  (+17 more)
html/html/: advanced.html  contact.html  credit.html  credits.html  dir.html  download.html  download.xpm  fixup.html  ftp.html  info.html  ishmail.frm  legal.html  license.html  licreq.html  linktype.html  main.html  netscape.html  parms.html  pkgtype.html  prices.html  read.html  samples.html  sys.386.html  sys.FreeBSD.html  sys.aix.html  sys.bsdi.html  sys.hp.html  sys.linux.html  sys.mips.html  sys.osf1.html  sys.sol.html  sys.sun.html  system.html  tar.html  who.html  xfer  zip.html
html/html/aix/: smit.html
html/html/hal.com/: index.html
html/html/hp/: hp.html  steps  update-last.html  update-load.html  update-main.html  update-src.html
html/html/mips/: mips.html
html/html/osf1/: setld.html
html/html/sol/: sol.html
html/img/: ishmail.gif.old  ishmail.map
html/products/ishmail/: guide
html/sgml/: index.html
lib/: .cvsignore  Ishmail  Ishmail-mono  Ishmail.colors  Ishmail.colors-mono  Ishmail.fonts  Ishmail.help  Ishmail.hlp.in  Ishmail.lang  Ishmail.misc  Ishmail.site  Makefile  audio.xpm  binary.xpm  box.xpm  display-0.xbm  edit-0.xpm  edit-1.xpm  edit-2.xpm  edit-3.xpm  edit-4.xpm  edit-5.xpm  edit-6.xpm  edit-7.xpm  gif.xpm  heart-0.xpm  heart-1.xpm  ishmail.xpm  jpg.xpm  mailcap  mpg.xpm  new_mail.xpm  pin-in.xbm  pin-out.xbm  postscript.xpm  retrieval-0.xbm  richtext.xpm  text.xpm  thumb_down.mask  thumb_down.xbm  (+14 more)
libexec/: Makefile  customize.pl  ishdecrypt  ishencrypt  showaudio  showextern  showimage  showpgp  showpgpsign  statChk.pl  statrun  xtermexec
man/: Makefile
man/man1/: ishmail.1
scripts/: build_dict_c  build_dict_h  build_list_c  build_list_h  cvs2cl.pl  makerelease  mkincl  pstrip
src/: .cvsignore  AddrMisc.C  AddrMisc.h  AddressC.C  AddressC.h  AlertPrefC.C  AlertPrefC.h  AlertPrefWinC.C  AlertPrefWinC.h  AliasPrefC.C  AliasPrefC.h  AliasPrefWinC.C  AliasPrefWinC.h  AppPrefC.C  AppPrefC.h  AppPrefWinC.C  AppPrefWinC.h  AutoFilePrefC.C  AutoFilePrefC.h  AutoFileWinC.C  AutoFileWinC.h  Base64.C  Base64.h  ButtPrefWinC.C  ButtPrefWinC.h  ButtonEditWinC.C  ButtonEditWinC.h  ButtonEntryC.C  ButtonEntryC.h  ButtonEntryListC.C  ButtonEntryListC.h  ButtonMgrC.C  ButtonMgrC.h  CompPrefC.C  CompPrefC.h  CompPrefWinC.C  CompPrefWinC.h  ComplexImapFindWinC.C  ComplexImapFindWinC.h  ComplexMsgFindWinC.C  (+261 more)
utils/: .cvsignore  Makefile  et2ps.c  paginate.ps  paginate.ps.verbose  prolog.h  rt2ps.c
